pld-comp/tests/ifcc-test-output/testfiles-1_93_multiplevar/gcc-compile.txt
input.c: In function ‘main’:
input.c:4:13: error: expected ‘;’ before ‘return’
     a,b,v=12
             ^
             ;
     return a,b,v;
     ~~~~~~   

return code: 1
